:sparkles: set java version to 1.8